style(html): implement static design page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="z-1 position-absolute top-50 start-50 translate-middle header_content">
-      <h1 class="header_title">
+      <h1>
         CHERCHEZ PARMI PLUS DE 1500 RECETTES <br> DU QUOTIDIEN,SIMPLES ET
         DÉLICIEUSES
       </h1>
@@ -38,12 +38,234 @@
           </svg>
         </button>
       </form>
-
-
-
     </div>
     </div>
   </header>
+
+  <main>
+    <nav class="navbar">
+      <ul class="nav">
+        <li class="nav-item">
+          <div class="dropdown">
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Ingrédients
+            </button>
+            <ul class="dropdown-menu">
+              <form class="centered_flex form" role="search">
+                <input class="dropdown_search position-relative" type="search" placeholder="" aria-label="Search">
+                <div class="dropdown_search_btn position-absolute z-2" type="submit"> <svg
+                    xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none">
+                    <circle cx="10" cy="10" r="9.5" stroke="currentColor" />
+                    <line x1="18.3536" y1="18.6464" x2="27.3536" y2="27.6464" stroke="currentColor" />
+                  </svg>
+                </div>
+              </form>
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="dropdown">
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Appareils
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="dropdown">
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Ustensiles
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
+        </li>
+
+      </ul>
+      <span class="total-recipe">1500 recettes</span>
+    </nav>
+    <section class="row card_container ">
+      <article class="card col-md-4 ">
+        <img src="/assets/images/Photos P7 JS Les petits plats/Recette01.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Limonade de Coco</h5>
+          <div class="recipe_container">
+            <h6 class="card-subtitle mb-2 text-body-secondary">RECETTE</h6>
+            <p class="card-text">Mettre les glaçons à votre goût dans le blender, Ajouter le lait la crème de coco, le
+              jus
+              de 2 citrons et le sucre
+              ensemble. Mixer jusqu'à obtenir la consistance désirée.
+            </p>
+          </div>
+          <div class="ingredints_container">
+            <h6 class="card-subtitle mb-2 text-body-secondary">INGRÉDIENTS</h6>
+            <div class="container">
+              <div class="row custom-row-gap ">
+                <div class="col-md-5 ingredient_item">
+                  <span>Lait de coco</span>
+                  <i>400ml</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Jus de citron</span>
+                  <i>2</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Créme de coco</span>
+                  <i>4 cuillères</i>
+                </div>
+
+                <div class="col-md-5 ingredient_item">
+                  <span>Jus de citron</span>
+                  <i>2</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Lait de coco</span>
+                  <i>400ml</i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <article class="card col-md-4 ">
+        <img src="/assets/images/Photos P7 JS Les petits plats/Recette01.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Limonade de Coco</h5>
+          <div class="recipe_container">
+            <h6 class="card-subtitle mb-2 text-body-secondary">RECETTE</h6>
+            <p class="card-text">Mettre les glaçons à votre goût dans le blender, Ajouter le lait la crème de coco, le
+              jus
+              de 2 citrons et le sucre
+              ensemble. Mixer jusqu'à obtenir la consistance désirée.
+            </p>
+          </div>
+          <div class="ingredints_container">
+            <h6 class="card-subtitle mb-2 text-body-secondary">INGRÉDIENTS</h6>
+            <div class="container">
+              <div class="row custom-row-gap ">
+                <div class="col-md-5 ingredient_item">
+                  <span>Lait de coco</span>
+                  <i>400ml</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Jus de citron</span>
+                  <i>2</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Créme de coco</span>
+                  <i>4 cuillères</i>
+                </div>
+
+                <div class="col-md-5 ingredient_item">
+                  <span>Jus de citron</span>
+                  <i>2</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Lait de coco</span>
+                  <i>400ml</i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <article class="card col-md-4 ">
+        <img src="/assets/images/Photos P7 JS Les petits plats/Recette01.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Limonade de Coco</h5>
+          <div class="recipe_container">
+            <h6 class="card-subtitle mb-2 text-body-secondary">RECETTE</h6>
+            <p class="card-text">Mettre les glaçons à votre goût dans le blender, Ajouter le lait la crème de coco, le
+              jus
+              de 2 citrons et le sucre
+              ensemble. Mixer jusqu'à obtenir la consistance désirée.
+            </p>
+          </div>
+          <div class="ingredints_container">
+            <h6 class="card-subtitle mb-2 text-body-secondary">INGRÉDIENTS</h6>
+            <div class="container">
+              <div class="row custom-row-gap ">
+                <div class="col-md-5 ingredient_item">
+                  <span>Lait de coco</span>
+                  <i>400ml</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Jus de citron</span>
+                  <i>2</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Créme de coco</span>
+                  <i>4 cuillères</i>
+                </div>
+
+                <div class="col-md-5 ingredient_item">
+                  <span>Jus de citron</span>
+                  <i>2</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Lait de coco</span>
+                  <i>400ml</i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <article class="card col-md-4 ">
+        <img src="/assets/images/Photos P7 JS Les petits plats/Recette01.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Limonade de Coco</h5>
+          <div class="recipe_container">
+            <h6 class="card-subtitle mb-2 text-body-secondary">RECETTE</h6>
+            <p class="card-text">Mettre les glaçons à votre goût dans le blender, Ajouter le lait la crème de coco, le
+              jus
+              de 2 citrons et le sucre
+              ensemble. Mixer jusqu'à obtenir la consistance désirée.
+            </p>
+          </div>
+          <div class="ingredints_container">
+            <h6 class="card-subtitle mb-2 text-body-secondary">INGRÉDIENTS</h6>
+            <div class="container">
+              <div class="row custom-row-gap ">
+                <div class="col-md-5 ingredient_item">
+                  <span>Lait de coco</span>
+                  <i>400ml</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Jus de citron</span>
+                  <i>2</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Créme de coco</span>
+                  <i>4 cuillères</i>
+                </div>
+
+                <div class="col-md-5 ingredient_item">
+                  <span>Jus de citron</span>
+                  <i>2</i>
+                </div>
+                <div class="col-md-5 ingredient_item">
+                  <span>Lait de coco</span>
+                  <i>400ml</i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
+
+  </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
