--- a/index.html
+++ b/index.html
@@ -94,181 +94,16 @@
       </ul>
       <span class="total-recipe">1500 recettes</span>
     </nav>
-    <section class="row card_container ">
-      <article class="card col-md-4 ">
-        <img src="/assets/images/Photos P7 JS Les petits plats/Recette01.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Limonade de Coco</h5>
-          <div class="recipe_container">
-            <h6 class="card-subtitle mb-2 text-body-secondary">RECETTE</h6>
-            <p class="card-text">Mettre les glaçons à votre goût dans le blender, Ajouter le lait la crème de coco, le
-              jus
-              de 2 citrons et le sucre
-              ensemble. Mixer jusqu'à obtenir la consistance désirée.
-            </p>
-          </div>
-          <div class="ingredints_container">
-            <h6 class="card-subtitle mb-2 text-body-secondary">INGRÉDIENTS</h6>
-            <div class="container">
-              <div class="row custom-row-gap ">
-                <div class="col-md-5 ingredient_item">
-                  <span>Lait de coco</span>
-                  <i>400ml</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Jus de citron</span>
-                  <i>2</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Créme de coco</span>
-                  <i>4 cuillères</i>
-                </div>
+    <section id="cards_container" class="row card_container ">
 
-                <div class="col-md-5 ingredient_item">
-                  <span>Jus de citron</span>
-                  <i>2</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Lait de coco</span>
-                  <i>400ml</i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </article>
-      <article class="card col-md-4 ">
-        <img src="/assets/images/Photos P7 JS Les petits plats/Recette01.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Limonade de Coco</h5>
-          <div class="recipe_container">
-            <h6 class="card-subtitle mb-2 text-body-secondary">RECETTE</h6>
-            <p class="card-text">Mettre les glaçons à votre goût dans le blender, Ajouter le lait la crème de coco, le
-              jus
-              de 2 citrons et le sucre
-              ensemble. Mixer jusqu'à obtenir la consistance désirée.
-            </p>
-          </div>
-          <div class="ingredints_container">
-            <h6 class="card-subtitle mb-2 text-body-secondary">INGRÉDIENTS</h6>
-            <div class="container">
-              <div class="row custom-row-gap ">
-                <div class="col-md-5 ingredient_item">
-                  <span>Lait de coco</span>
-                  <i>400ml</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Jus de citron</span>
-                  <i>2</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Créme de coco</span>
-                  <i>4 cuillères</i>
-                </div>
 
-                <div class="col-md-5 ingredient_item">
-                  <span>Jus de citron</span>
-                  <i>2</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Lait de coco</span>
-                  <i>400ml</i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </article>
-      <article class="card col-md-4 ">
-        <img src="/assets/images/Photos P7 JS Les petits plats/Recette01.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Limonade de Coco</h5>
-          <div class="recipe_container">
-            <h6 class="card-subtitle mb-2 text-body-secondary">RECETTE</h6>
-            <p class="card-text">Mettre les glaçons à votre goût dans le blender, Ajouter le lait la crème de coco, le
-              jus
-              de 2 citrons et le sucre
-              ensemble. Mixer jusqu'à obtenir la consistance désirée.
-            </p>
-          </div>
-          <div class="ingredints_container">
-            <h6 class="card-subtitle mb-2 text-body-secondary">INGRÉDIENTS</h6>
-            <div class="container">
-              <div class="row custom-row-gap ">
-                <div class="col-md-5 ingredient_item">
-                  <span>Lait de coco</span>
-                  <i>400ml</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Jus de citron</span>
-                  <i>2</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Créme de coco</span>
-                  <i>4 cuillères</i>
-                </div>
-
-                <div class="col-md-5 ingredient_item">
-                  <span>Jus de citron</span>
-                  <i>2</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Lait de coco</span>
-                  <i>400ml</i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </article>
-      <article class="card col-md-4 ">
-        <img src="/assets/images/Photos P7 JS Les petits plats/Recette01.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Limonade de Coco</h5>
-          <div class="recipe_container">
-            <h6 class="card-subtitle mb-2 text-body-secondary">RECETTE</h6>
-            <p class="card-text">Mettre les glaçons à votre goût dans le blender, Ajouter le lait la crème de coco, le
-              jus
-              de 2 citrons et le sucre
-              ensemble. Mixer jusqu'à obtenir la consistance désirée.
-            </p>
-          </div>
-          <div class="ingredints_container">
-            <h6 class="card-subtitle mb-2 text-body-secondary">INGRÉDIENTS</h6>
-            <div class="container">
-              <div class="row custom-row-gap ">
-                <div class="col-md-5 ingredient_item">
-                  <span>Lait de coco</span>
-                  <i>400ml</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Jus de citron</span>
-                  <i>2</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Créme de coco</span>
-                  <i>4 cuillères</i>
-                </div>
-
-                <div class="col-md-5 ingredient_item">
-                  <span>Jus de citron</span>
-                  <i>2</i>
-                </div>
-                <div class="col-md-5 ingredient_item">
-                  <span>Lait de coco</span>
-                  <i>400ml</i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </article>
     </section>
 
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+  <script type="module" src="/script/index.js"></script>
 </body>
 
 </html>
