feat(searchbar): implement search feature

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
         </li>
 
       </ul>
-      <span class="total-recipe">1500 recettes</span>
+      <span id="totalRecipe" class="total-recipe"><i id="recipeNumber" class="total-recipe">1500</i> recettes</span>
     </nav>
-    <section id="cards_container" class="row card_container ">
+    <section id="cardsContainer" class="row card_container ">
 
 
     </section>
